objects/DownloadFiles__Excluded_Object__c.object
<CustomObject>
    <fields>
        <fullName>DownloadFiles__External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DownloadFiles__File_Name_Suffix__c</fullName>
        <label>File Name Suffix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DownloadFiles__Folder_Name__c</fullName>
        <label>Folder Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DownloadFiles__From_Date__c</fullName>
        <label>From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DownloadFiles__IsExcluded__c</fullName>
        <defaultValue>true</defaultValue>
        <label>IsExcluded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DownloadFiles__Object_API_Name__c</fullName>
        <label>Object API Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DownloadFiles__Object_Label__c</fullName>
        <label>Object Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DownloadFiles__To_Date__c</fullName>
        <label>To Date</label>
        <type>Date</type>
    </fields>
    <label>Excluded Object</label>
    <nameField>
        <displayFormat>SO-{00000}</displayFormat>
        <label>Excluded Object Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Excluded Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>